--- a/forms.html
+++ b/forms.html
@@ -34,6 +34,7 @@
 
 <body ng-controller="mainController">
     <div class="container" style="margin-top:30px">
+        <h2>{{form.name}} - {{form.description}}</h2>
         <form>
             <div class="form-group" ng-show="form.fields[0].first_name != '' && form.fields[0].first_name">
                 <label>{{form.fields[0].first_name}}</label>
